[package]
name = "scraper"
version = "0.1.0"
authors = ["Seth Swanson <sethswanson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
tokio = "0.2.0-alpha.5"
futures-util = "0.3.1"
fantoccini = "0.12.0-alpha.2"
