[package]
name = "scraper"
version = "0.1.0"
authors = ["Seth Swanson <sethswanson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
smol = { version = "0.1", features = ["tokio02"] }
futures = "0.3.4"
fantoccini = "0.12.0-alpha.2"
structopt = { version = "^0.3", features = [ "paw" ] }
paw = "1.0"
soup = "0.4"
