[package]
name = "scraper"
version = "0.1.0"
authors = ["Seth Swanson <sethswanson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"
reqwest = "^0.10"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.4"
fantoccini = "^0.14"
structopt = { version = "^0.3", features = [ "paw" ] }
paw = "1.0"
soup = "0.5"
select = "^0.4"
lazy_static = "^1"
url = "^2"
